--- a/AAA.html
+++ b/AAA.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+
 <h1>[용환승 칼럼]  휴머노이드 로봇</h1>
 
 <h5><br><br>휴머노이드 로봇은 인간의 모습을 한 로봇을 뜻하며 필자는 이를 줄여서 휴봇이라고 하겠다.
